; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/xilinx_hwicap/extr_fifo_icap.c_fifo_icap_flush_fifo.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/xilinx_hwicap/extr_fifo_icap.c_fifo_icap_flush_fifo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hwicap_drvdata = type { i64 }

@XHI_CR_OFFSET = common dso_local global i64 0, align 8
@XHI_CR_FIFO_CLR_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fifo_icap_flush_fifo(%struct.hwicap_drvdata* %0) #0 {
  %2 = alloca %struct.hwicap_drvdata*, align 8
  %3 = alloca i32, align 4
  store %struct.hwicap_drvdata* %0, %struct.hwicap_drvdata** %2, align 8
  %4 = load %struct.hwicap_drvdata*, %struct.hwicap_drvdata** %2, align 8
  %5 = getelementptr inbounds %struct.hwicap_drvdata, %struct.hwicap_drvdata* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @XHI_CR_OFFSET, align 8
  %8 = add nsw i64 %6, %7
  %9 = call i32 @in_be32(i64 %8)
  store i32 %9, i32* %3, align 4
  %10 = load %struct.hwicap_drvdata*, %struct.hwicap_drvdata** %2, align 8
  %11 = getelementptr inbounds %struct.hwicap_drvdata, %struct.hwicap_drvdata* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @XHI_CR_OFFSET, align 8
  %14 = add nsw i64 %12, %13
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* @XHI_CR_FIFO_CLR_MASK, align 4
  %17 = or i32 %15, %16
  %18 = call i32 @out_be32(i64 %14, i32 %17)
  %19 = load %struct.hwicap_drvdata*, %struct.hwicap_drvdata** %2, align 8
  %20 = getelementptr inbounds %struct.hwicap_drvdata, %struct.hwicap_drvdata* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @XHI_CR_OFFSET, align 8
  %23 = add nsw i64 %21, %22
  %24 = load i32, i32* %3, align 4
  %25 = load i32, i32* @XHI_CR_FIFO_CLR_MASK, align 4
  %26 = xor i32 %25, -1
  %27 = and i32 %24, %26
  %28 = call i32 @out_be32(i64 %23, i32 %27)
  ret void
}

declare dso_local i32 @in_be32(i64) #1

declare dso_local i32 @out_be32(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
